# ChangeLog for media-gfx/digikam
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/digikam/ChangeLog,v 1.220 2012/07/09 19:50:26 dilfridge Exp $

  09 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org> digikam-2.5.0.ebuild,
  digikam-2.6.0.ebuild:
  Specify exact libpgf version, newer does not work, see bug 424563

*digikam-2.6.0 (07 Jun 2012)

  07 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org> -digikam-2.4.1.ebuild,
  -digikam-2.6.0_beta3.ebuild, -digikam-2.6.0_rc.ebuild, +digikam-2.6.0.ebuild:
  Version bump; remove old, beta, and rc

*digikam-2.6.0_rc (13 May 2012)

  13 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +digikam-2.6.0_rc.ebuild:
  Version bump

  19 Apr 2012; Markus Meier <maekke@gentoo.org> digikam-2.5.0.ebuild:
  x86 stable, bug #409403

*digikam-2.6.0_beta3 (08 Apr 2012)

  08 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org> -digikam-2.3.0.ebuild,
  +digikam-2.6.0_beta3.ebuild:
  Version bump; remove old

  04 Apr 2012; Agostino Sarubbo <ago@gentoo.org> digikam-2.5.0.ebuild:
  Stable for amd64, wrt bug #409403

  18 Mar 2012; Andreas K. Huettel <dilfridge@gentoo.org> metadata.xml:
  tt (tatar) is now in global linguas list

  12 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org> digikam-2.3.0.ebuild,
  digikam-2.4.1.ebuild, digikam-2.5.0.ebuild:
  Add Boost to DEPEND, bug 400545

  12 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org> digikam-2.5.0.ebuild,
  +files/digikam-2.5.0-boost148.patch:
  Add compatibility patch for Boost 1.48, bug 399727

  12 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org> digikam-2.5.0.ebuild:
  Install handbooks, bug 338757

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> digikam-2.4.1.ebuild:
  Stable for amd64, wrt bug #396359

  09 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> digikam-2.4.1.ebuild:
  x86 stable wrt bug #396359

*digikam-2.5.0 (03 Jan 2012)
