@@ -5,24 +5,24 @@ AUX digikam-2.5.0-boost148.patch 4133 SHA256 e9adb199ca4955f64275481231c6761c32b
 AUX digikam-2.5.0-libkipi.patch 2670 SHA256 7652e7854998b03a6047779361801dc63aa42c1f0221ef2b5c0f0a25abf1e651 SHA512 833119ee89682a2350f290264d5f26ce39e92f2786401bf2d3125948ddd12ee382ca74882b219de5d0a753dcc5908d9b99878ff818f4ead0a55b10cf06a277c7 WHIRLPOOL 4d6d70dbed9899c84e57866fa3e204acbc7ee080e26c975e32fc4a1476738fe9018ec69ce16722b7758a2c45f9990b3a9f68be097b858b078c0ff13bc3cd0d27
 DIST digikam-2.5.0.tar.bz2 54976375 SHA256 55292c79b41fd2c20ce0a821f388645436acb18b3b06b486747e17129114851a
 DIST digikam-2.6.0.tar.bz2 55362029 SHA256 411ceaa3a489d9c9a5566d43c167927a07fb08fb4f613b0dbf1dec65b95736df SHA512 7984e8b463a5393a4606a4f6d752c7d006cc62ada6947467c034ec5e7fdd5de12826e0f33bfb07b80bb7c83d03a29273eec618a0e7c0f5588416b94fe1d2768a WHIRLPOOL 9e8812e4de7a4670c0d5c6b3286a510530325a797e9782793bafaef14cc7f09c8ddf7a3836b2bbf61fa82c50d92a418d1d4cf4c4554f841b7ea47bc4567c01bc
-EBUILD digikam-2.5.0.ebuild 4201 SHA256 dd79d386a53f5a1ed22d25e89370b559079e7bac3f16d0c1b317f6af423193cb SHA512 cf01c09171a32f620c0b7af713944d21c30d7f9d247eac0c554e91d650ad36950ea03ef34931271f3ff1039e658418850303b4fee6b061640ba67bef7c82e148 WHIRLPOOL 4ef612429dd2ff808ce926bf625e13c08c41ea74ee7babe0c2c5691f1ed2465290f6b5d29bc15f42d638ce9b52813b5ac0c2ed9444265c810a592212ef23017f
-EBUILD digikam-2.6.0.ebuild 4099 SHA256 fde88180fb4cb9347f88ed949b7c298a3a75416a447351ae78d4e4f20d8fe1e9 SHA512 2a1647b56d12fc03acdfe6894015303fc21a327b5d5003bb54ee6acb59d342ae4d4415723b3950a2f3ceaae724fe39c45b49b87907aa2205f04691a8775c04f0 WHIRLPOOL 1ade938e5cdd2136f3cfd038e2b483cd67a861588caff07a186c9a46c12a72f4ad2c727f129a810ff50eaa1a2fa555c1486108ab782ffbf2a816fe12fefac197
-MISC ChangeLog 37023 SHA256 d7924c19ef81f2fb39a0e10cc6d93b8fc6919dcc10ac3743ad0a904dfa73f856 SHA512 1d65f2a06d23071488521fc07a43f5f57614939486c95cad3b460294ad936d1b8dd2d090a5257c84c5ab044ace2c6a253e9933ddc53a1ac3e1d5eeeee8f2736d WHIRLPOOL 48167a63c715c2bb7fce31605f2f159111a50a2c74f97ba63d095353a1bf5d5d71c0b36dc609ff1a6d492d15b0d4df8c358020466e8ca4a7d9f3dca9abf27ebd
+EBUILD digikam-2.5.0.ebuild 4192 SHA256 6715251e37e655f066d9e56c8f627115e86beb9cc3e2d4349540466cc5c91897 SHA512 b66fb82e1fcf936c64ec6cfae829e7558ef32e777bc1d6de194dff49d6cf5d66372a0d28619c5347ed607cb72437ef838df8e544901a7a8827d8ff963195cbe9 WHIRLPOOL fa4dcaf637ff8439423b2feaecb0648bc2a5f6c0f7fe99a5bbbc71b2fa79dc7d11fbb106fcbef4cddc110e10d9f39495565b5fb93d6fb0e411ab6ee6fce43f31
+EBUILD digikam-2.6.0.ebuild 4090 SHA256 5fff716e512d5821c9670c6b08022afbacacdf57ee431f65f270be8a2c01b844 SHA512 ccd886ba2eddf8199773bcdc9a93e3768b0cb75d98181928eeca23324c6b3a44ef2452d66c773a1d4f816daa31759b1cc7943951f555d38c63ae56c4314d13b3 WHIRLPOOL be2fe8fb5ad527b2d74ccfbc74b0043a88cb9884fc1ad91b4992bb3ea653b7b4868fd4ec001e7908a68aed24c898ae5f665fbf72ef46025309b118957d5eed99
+MISC ChangeLog 37164 SHA256 aa2452cadb9db40d7c8cc414faf533e02010115fc3490ed1a8b9aff76d7aa749 SHA512 be44ea94867d9efaa12bdb9799dcf7c39fe72982a98e917453c31e4d593e6ae833bde0200036d571c9c181b8094da7f92c8910629dd06f36af6b83bb1af1ed97 WHIRLPOOL d25ac6a5229e780d9dae9538a87d698cd9936298442d24ef560ef2d1d95e3d6548ad4ae2b2350d5f143917922974c21d9e2ebe14d1d5d4c2997de77d6d207c73
 MISC metadata.xml 648 SHA256 fed8bb77a841bcbc558e06fbe5f729a616152051924fa17fed0e527237f09f8c SHA512 70b5b6c2f5d5ae242a3a3fe287802eaf722cd611ea0db1abe1c2daabf7a960c2f7ebc30e646db52f373efa9f9aa18481abc422bf9b080a8d6248551e0b8bd86d WHIRLPOOL 45976f32e90b1ba1e0b654017400b7e4860cbf5f6a1284fbfd81d05dd3df13654d7cea41a925c6bfc227c63566fc2af80299458c9c866b10628e12d38951803f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJP+zZcAAoJENwGBM22xffeUaUP/Anmh4v1FkAoUMJ4msOfBKJl
-qAAVC01Ilmr/urBpJtXWdkkVzcwpKSvYRQWh/d65UvqCZbDDcTuKwtsModtu65/8
-yNqWIdEM4KruZjWTP6OLpdloEjuCj0FMo0xRV2JBjNXEVduX48ZAxATvFnvC2Ulv
-FL61piChONXPNgbeSwC7zVYLulo4KjSbs2e+vxhdZj+IrLqpt4GK7mC48QuImXsv
-2UYZsvJO0dm3D7q7UZp8TGNP+w52XRw/N8M8XEwP+Q47wRPk22Th22mgkudJO0GV
-Tdu0KGT1tYTQWDJ1LlCZMftJg3oIeyLXn2KkBxwQ3RKVph8o/HTy4jIzgxB3VAxW
-fwkzXnBO6pr+jlrIi7VnHactIRRpCYqBLw19rfMznD4hSZEGUIjDuNBxBFci8Jgg
-1lk2nf11s3IJg6THohQfhdexC8lqy0KlUJR5zTtzNzirVhjrE1XHtj7YFcPUfv2H
-zij0qk1JfL7Lq8TDtJQhrRz8P0vTN9P1dlWLY0RHuE1RCh+OIZuwdeEC8GaPx7uk
-Cu69SzQbFf9z+HEn5S4WcU5qDQOwxZZ6Dhpbju/3HPXkk8auPxqX7vk3VKA0n7iE
-lWE3swnn9cyQmmo/uNo1jagZ/JGEyIHVeXvwZYWCxq6u6arZWxNPRFCMMWKT+9al
-s5wyaCV8fj4r/DLZ7cjb
-=Wkzk
+iQIcBAEBCgAGBQJP+zmJAAoJENwGBM22xffeseMP/1gsIaaeceDqNtZIq7L1M69w
+KHI5Z+4w3yKOga9wUJPaZhwt3aTp/u5jLh8j9mGHxnfkzTgtxJuf2yeuXRokOv7I
+7GfQRLAlWje4Of+/V4BT4s2Iz329NF8mYe5Y0bW8DR/sLGa2G3FQB0DdqBB8UAsr
+rvsfb/L03mtrCdtn3L7et5knVf4PBEKtrDH1JPFHV0Wc6vCgIaVvH3CaJgAlVNFj
+NIhIHBJ9ETTferR+MzWqVvwnu3RHEKktupKJBWmijdiVQUbpZYvCZheuYv82anYM
+yXlaqneLUxfCDjLWh0LZMdYNIxkb67PwV2T8bnX/zqVaNBnzOXuslPt8/ip07LRS
+QFRxSxD7LLPXgBAXU3LGA9WcTRJUi7KvDPZLZaHkboXennBxaPHdgwTtEAdOSUWY
+BqT7JcIElj5q9mCtsmIipN/jhETdc6t1Zki5ZyMhtoRiylbiSlbYdOBarKplg8xp
+cVsTb494dj6EhxJ97t4+2YXtqnvi+/eEzrXnMxQQnOU54LJp+Avu3fRNq2+L4fcF
+BiQVp7v8ZcvU7tu+H9WUHRHjXBdYzJ58G4imErpn3cLGo5nxbhvpmVejBX3KGPp1
+itSK31x2KqlQr0+C3ZCkA46Pn0uc1NexwoLjpzS4w5Q1egVownrFjqR1L28D8onS
+egJOScTJQ86qPv/iSV6S
+=bT7i
 -----END PGP SIGNATURE-----
