@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/digikam
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/digikam/ChangeLog,v 1.220 2012/07/09 19:50:26 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/digikam/ChangeLog,v 1.221 2012/07/09 20:04:05 dilfridge Exp $
+
+  09 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org> digikam-2.5.0.ebuild,
+  digikam-2.6.0.ebuild:
+  Seems it was not needed after all.
 
   09 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org> digikam-2.5.0.ebuild,
   digikam-2.6.0.ebuild:
